codegen/generated/goud_engine.h

/**
 * Opaque identifier for an engine context.
 */
typedef struct GoudContextId {
    uint64_t _0;
} GoudContextId;
/**
 * Sets the 3D camera position.
 */
bool goud_renderer3d_set_camera_position(struct GoudContextId context_id, float x, float y, float z);
/**
 * Sets the 3D camera rotation (pitch, yaw, roll in degrees).
 */
bool goud_renderer3d_set_camera_rotation(struct GoudContextId context_id, float pitch, float yaw, float roll);
/**
 * Configures the ground grid.
 */
bool goud_renderer3d_configure_grid(struct GoudContextId context_id, bool enabled, float size, uint32_t divisions);
/**
 * Sets grid enabled state.
 */
bool goud_renderer3d_set_grid_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Configures the skybox/background color.
 */
bool goud_renderer3d_configure_skybox(struct GoudContextId context_id, bool enabled, float r, float g, float b, float a);
/**
 * Configures fog settings.
 */
bool goud_renderer3d_configure_fog(struct GoudContextId context_id, bool enabled, float r, float g, float b, float density);
/**
 * Configures linear fog with explicit start/end distances.
 */
bool goud_renderer3d_configure_fog_linear(struct GoudContextId context_id, bool enabled, float start_distance, float end_distance, float r, float g, float b);
/**
 * Sets fog enabled state.
 */
bool goud_renderer3d_set_fog_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Returns whether frustum culling is enabled.
 */
bool goud_renderer3d_get_frustum_culling_enabled(struct GoudContextId context_id);
/**
 * Returns the skinning mode (0 = CPU, 1 = GPU), or -1 on error.
 */
int32_t goud_renderer3d_get_skinning_mode(struct GoudContextId context_id);
/**
 * Returns whether material sorting is enabled.
 */
bool goud_renderer3d_get_material_sorting_enabled(struct GoudContextId context_id);
/**
 * Returns whether static batching is enabled.
 */
bool goud_renderer3d_get_static_batching_enabled(struct GoudContextId context_id);
/**
 * Returns whether instanced rendering is enabled.
 */
bool goud_renderer3d_get_instancing_enabled(struct GoudContextId context_id);
/**
 * Returns whether animation LOD is enabled.
 */
bool goud_renderer3d_get_animation_lod_enabled(struct GoudContextId context_id);
/**
 * Returns whether shared animation evaluation is enabled.
 */
bool goud_renderer3d_get_shared_animation_eval(struct GoudContextId context_id);
/**
 * Returns the current animation LOD half-rate distance.
 */
float goud_renderer3d_get_animation_lod_distance(struct GoudContextId context_id);
/**
 * Returns the current animation LOD freeze distance.
 */
float goud_renderer3d_get_animation_lod_skip_distance(struct GoudContextId context_id);
/**
 * Returns the baked animation sample rate, or -1.0 on error.
 */
float goud_renderer3d_get_baked_animation_sample_rate(struct GoudContextId context_id);
/**
 * Returns the minimum instance count for batching, or -1 on error.
 */
int32_t goud_renderer3d_get_min_instances_for_batching(struct GoudContextId context_id);
/**
 * Returns the current grid transparency alpha.
 */
float goud_renderer3d_get_grid_alpha(struct GoudContextId context_id);
/**
 * Returns the frustum culling FOV in degrees, or -1.0 on error.
 */
float goud_renderer3d_get_frustum_culling_fov(struct GoudContextId context_id);
/**
 * Returns the frustum culling near plane distance, or -1.0 on error.
 */
float goud_renderer3d_get_frustum_culling_near_plane(struct GoudContextId context_id);
/**
 * Returns the frustum culling far plane distance, or -1.0 on error.
 */
float goud_renderer3d_get_frustum_culling_far_plane(struct GoudContextId context_id);
/**
 * Returns whether shadows are enabled.
 */
bool goud_renderer3d_get_shadows_enabled(struct GoudContextId context_id);
/**
 * Returns the shadow map resolution, or -1 on error.
 */
int32_t goud_renderer3d_get_shadow_map_size(struct GoudContextId context_id);
/**
 * Returns the shadow depth bias, or -1.0 on error.
 */
float goud_renderer3d_get_shadow_bias(struct GoudContextId context_id);
/**
 * Returns the maximum vertex count for static batching, or -1 on error.
 */
int32_t goud_renderer3d_get_max_static_batch_vertices(struct GoudContextId context_id);
/**
 * Returns the maximum bones per mesh, or -1 on error.
 */
int32_t goud_renderer3d_get_max_bones_per_mesh(struct GoudContextId context_id);
/**
 * Returns the shadow strength (0.0-1.0), or -1.0 on error.
 */
float goud_renderer3d_get_shadow_strength(struct GoudContextId context_id);
/**
 * Returns the vertex threshold for shadow auto-disable, or -1 on error.
 */
int32_t goud_renderer3d_get_shadow_auto_disable_threshold(struct GoudContextId context_id);
/**
 * Enables or disables frustum culling.
 */
int32_t goud_renderer3d_set_frustum_culling_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Sets the skinning mode (0 = CPU, 1 = GPU).
 */
int32_t goud_renderer3d_set_skinning_mode(struct GoudContextId context_id, uint32_t mode);
/**
 * Enables or disables material sorting.
 */
int32_t goud_renderer3d_set_material_sorting_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Enables or disables animation LOD (distance-based update throttling).
 */
int32_t goud_renderer3d_set_animation_lod_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Enables or disables shared animation evaluation (cache identical poses).
 */
int32_t goud_renderer3d_set_shared_animation_eval(struct GoudContextId context_id, bool enabled);
/**
 * Sets the distance at which animation updates are half-rated (every other frame).
 */
int32_t goud_renderer3d_set_animation_lod_distance(struct GoudContextId context_id, float distance);
/**
 * Sets the distance at which animation updates are frozen entirely.
 */
int32_t goud_renderer3d_set_animation_lod_skip_distance(struct GoudContextId context_id, float distance);
/**
 * Enables or disables static batching.
 */
int32_t goud_renderer3d_set_static_batching_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Enables or disables instanced rendering.
 */
int32_t goud_renderer3d_set_instancing_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Sets the baked animation sample rate in frames per second.
 */
int32_t goud_renderer3d_set_baked_animation_sample_rate(struct GoudContextId context_id, float rate);
/**
 * Sets the minimum instance count required for instanced rendering.
 */
int32_t goud_renderer3d_set_min_instances_for_batching(struct GoudContextId context_id, uint32_t count);
/**
 * Sets the fallback material color used when a mesh has no assigned material.
 */
int32_t goud_renderer3d_set_default_material_color(struct GoudContextId context_id, float r, float g, float b, float a);
/**
 * Returns the fallback material color as four RGBA floats packed into an array.
 */
int32_t goud_renderer3d_get_default_material_color(struct GoudContextId context_id, float *out_r, float *out_g, float *out_b, float *out_a);
/**
 * Sets the grid transparency alpha (0.0 = invisible, 1.0 = opaque).
 */
int32_t goud_renderer3d_set_grid_alpha(struct GoudContextId context_id, float alpha);
/**
 * Sets the vertical field of view for frustum culling, in degrees.
 */
int32_t goud_renderer3d_set_frustum_culling_fov(struct GoudContextId context_id, float fov_degrees);
/**
 * Sets the near clipping plane for frustum culling.
 */
int32_t goud_renderer3d_set_frustum_culling_near_plane(struct GoudContextId context_id, float near);
/**
 * Sets the far clipping plane for frustum culling.
 */
int32_t goud_renderer3d_set_frustum_culling_far_plane(struct GoudContextId context_id, float far);
/**
 * Enables or disables shadow mapping.
 */
int32_t goud_renderer3d_set_shadows_enabled(struct GoudContextId context_id, bool enabled);
/**
 * Sets the shadow map resolution.
 */
int32_t goud_renderer3d_set_shadow_map_size(struct GoudContextId context_id, uint32_t size);
/**
 * Sets the shadow depth bias.
 */
int32_t goud_renderer3d_set_shadow_bias(struct GoudContextId context_id, float bias);
/**
 * Sets the maximum vertex count for static batching.
 */
int32_t goud_renderer3d_set_max_static_batch_vertices(struct GoudContextId context_id, uint32_t vertices);
/**
 * Sets the maximum bones per mesh for skeletal animation.
 */
int32_t goud_renderer3d_set_max_bones_per_mesh(struct GoudContextId context_id, uint32_t bones);
/**
 * Sets the shadow strength (darkness, 0.0 = invisible, 1.0 = fully opaque).
 */
int32_t goud_renderer3d_set_shadow_strength(struct GoudContextId context_id, float strength);
/**
 * Sets the vertex threshold at which shadows are automatically disabled.
 */
int32_t goud_renderer3d_set_shadow_auto_disable_threshold(struct GoudContextId context_id, uint32_t threshold);
/**
 * Adds a light to the scene.
 */
uint32_t goud_renderer3d_add_light(struct GoudContextId context_id, int32_t light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);
/**
 * Updates a light's properties.
 */
bool goud_renderer3d_update_light(struct GoudContextId context_id, uint32_t light_id, int32_t light_type, float pos_x, float pos_y, float pos_z, float dir_x, float dir_y, float dir_z, float r, float g, float b, float intensity, float range, float spot_angle);
/**
 * Removes a light from the scene.
 */
bool goud_renderer3d_remove_light(struct GoudContextId context_id, uint32_t light_id);
/**
 * Creates multiple independent instances of a source model in one call.
 */
int32_t goud_renderer3d_instantiate_model_batch(struct GoudContextId context_id, uint32_t source_model_id, uint32_t count, uint32_t *out_ids);
/**
 * Creates a 3D cube object.
 */
uint32_t goud_renderer3d_create_cube(struct GoudContextId context_id, uint32_t texture_id, float width, float height, float depth);
/**
 * Creates a 3D plane object.
 */
uint32_t goud_renderer3d_create_plane(struct GoudContextId context_id, uint32_t texture_id, float width, float depth);
/**
 * Creates an instance of a source plane primitive.
 */
uint32_t goud_renderer3d_instantiate_plane(struct GoudContextId context_id, uint32_t source_plane_id);
/**
 * Creates a 3D sphere object.
 */
uint32_t goud_renderer3d_create_sphere(struct GoudContextId context_id, uint32_t texture_id, float diameter, uint32_t segments);
/**
 * Creates a 3D cylinder object.
 */
uint32_t goud_renderer3d_create_cylinder(struct GoudContextId context_id, uint32_t texture_id, float radius, float height, uint32_t segments);
/**
 * Sets the position of a 3D object.
 */
bool goud_renderer3d_set_object_position(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Sets the rotation of a 3D object (in degrees).
 */
bool goud_renderer3d_set_object_rotation(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Sets the scale of a 3D object.
 */
bool goud_renderer3d_set_object_scale(struct GoudContextId context_id, uint32_t object_id, float x, float y, float z);
/**
 * Marks a 3D object as static or dynamic.
 */
bool goud_renderer3d_set_object_static(struct GoudContextId context_id, uint32_t object_id, bool is_static);
/**
 * Destroys a 3D object.
 */
bool goud_renderer3d_destroy_object(struct GoudContextId context_id, uint32_t object_id);