sdks/python/goudengine/generated/_ffi.py


    # renderer_3d
    _lib.goud_renderer3d_create_cube.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_create_cube.restype = ctypes.c_uint32
    _lib.goud_renderer3d_create_plane.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_create_plane.restype = ctypes.c_uint32
    _lib.goud_renderer3d_instantiate_plane.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_instantiate_plane.restype = ctypes.c_uint32
    _lib.goud_renderer3d_create_sphere.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_uint32]
    _lib.goud_renderer3d_create_sphere.restype = ctypes.c_uint32
    _lib.goud_renderer3d_create_cylinder.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_uint32]
    _lib.goud_renderer3d_create_cylinder.restype = ctypes.c_uint32
    _lib.goud_renderer3d_set_object_position.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_object_position.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_object_rotation.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_object_rotation.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_object_scale.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_object_scale.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_object_static.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_bool]
    _lib.goud_renderer3d_set_object_static.restype = ctypes.c_bool
    _lib.goud_renderer3d_destroy_object.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_destroy_object.restype = ctypes.c_bool
    _lib.goud_renderer3d_add_light.argtypes = [GoudContextId, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_add_light.restype = ctypes.c_uint32
    _lib.goud_renderer3d_update_light.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_int32, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_update_light.restype = ctypes.c_bool
    _lib.goud_renderer3d_remove_light.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_remove_light.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_camera_position.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_camera_position.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_camera_rotation.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_camera_rotation.restype = ctypes.c_bool
    _lib.goud_renderer3d_configure_grid.argtypes = [GoudContextId, ctypes.c_bool, ctypes.c_float, ctypes.c_uint32]
    _lib.goud_renderer3d_configure_grid.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_grid_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_grid_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_configure_skybox.argtypes = [GoudContextId, ctypes.c_bool, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_configure_skybox.restype = ctypes.c_bool
    _lib.goud_renderer3d_configure_fog.argtypes = [GoudContextId, ctypes.c_bool, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_configure_fog.restype = ctypes.c_bool
    _lib.goud_renderer3d_configure_fog_linear.argtypes = [GoudContextId, ctypes.c_bool, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_configure_fog_linear.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_fog_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_fog_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_frustum_culling_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_frustum_culling_enabled.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_skinning_mode.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_set_skinning_mode.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_material_sorting_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_material_sorting_enabled.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_animation_lod_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_animation_lod_enabled.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_shared_animation_eval.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_shared_animation_eval.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_animation_lod_distance.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_animation_lod_distance.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_animation_lod_skip_distance.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_animation_lod_skip_distance.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_animation_lod_distance.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_animation_lod_distance.restype = ctypes.c_float
    _lib.goud_renderer3d_get_animation_lod_skip_distance.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_animation_lod_skip_distance.restype = ctypes.c_float
    _lib.goud_renderer3d_set_static_batching_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_static_batching_enabled.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_instancing_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_instancing_enabled.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_frustum_culling_enabled.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_frustum_culling_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_skinning_mode.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_skinning_mode.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_material_sorting_enabled.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_material_sorting_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_static_batching_enabled.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_static_batching_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_instancing_enabled.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_instancing_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_animation_lod_enabled.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_animation_lod_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_get_shared_animation_eval.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_shared_animation_eval.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_baked_animation_sample_rate.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_baked_animation_sample_rate.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_baked_animation_sample_rate.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_baked_animation_sample_rate.restype = ctypes.c_float
    _lib.goud_renderer3d_set_min_instances_for_batching.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_set_min_instances_for_batching.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_min_instances_for_batching.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_min_instances_for_batching.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_default_material_color.argtypes = [GoudContextId, ctypes.c_float, ctypes.c_float, ctypes.c_float, ctypes.c_float]
    _lib.goud_renderer3d_set_default_material_color.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_default_material_color.argtypes = [GoudContextId, ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float), ctypes.POINTER(ctypes.c_float)]
    _lib.goud_renderer3d_get_default_material_color.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_grid_alpha.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_grid_alpha.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_grid_alpha.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_grid_alpha.restype = ctypes.c_float
    _lib.goud_renderer3d_set_frustum_culling_fov.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_frustum_culling_fov.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_frustum_culling_fov.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_frustum_culling_fov.restype = ctypes.c_float
    _lib.goud_renderer3d_set_frustum_culling_near_plane.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_frustum_culling_near_plane.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_frustum_culling_near_plane.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_frustum_culling_near_plane.restype = ctypes.c_float
    _lib.goud_renderer3d_set_frustum_culling_far_plane.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_frustum_culling_far_plane.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_frustum_culling_far_plane.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_frustum_culling_far_plane.restype = ctypes.c_float
    _lib.goud_renderer3d_set_shadows_enabled.argtypes = [GoudContextId, ctypes.c_bool]
    _lib.goud_renderer3d_set_shadows_enabled.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_shadows_enabled.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_shadows_enabled.restype = ctypes.c_bool
    _lib.goud_renderer3d_set_shadow_map_size.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_set_shadow_map_size.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_shadow_map_size.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_shadow_map_size.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_shadow_bias.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_shadow_bias.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_shadow_bias.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_shadow_bias.restype = ctypes.c_float
    _lib.goud_renderer3d_set_max_static_batch_vertices.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_set_max_static_batch_vertices.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_max_static_batch_vertices.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_max_static_batch_vertices.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_max_bones_per_mesh.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_set_max_bones_per_mesh.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_max_bones_per_mesh.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_max_bones_per_mesh.restype = ctypes.c_int32
    _lib.goud_renderer3d_set_shadow_strength.argtypes = [GoudContextId, ctypes.c_float]
    _lib.goud_renderer3d_set_shadow_strength.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_shadow_strength.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_shadow_strength.restype = ctypes.c_float
    _lib.goud_renderer3d_set_shadow_auto_disable_threshold.argtypes = [GoudContextId, ctypes.c_uint32]
    _lib.goud_renderer3d_set_shadow_auto_disable_threshold.restype = ctypes.c_int32
    _lib.goud_renderer3d_get_shadow_auto_disable_threshold.argtypes = [GoudContextId]
    _lib.goud_renderer3d_get_shadow_auto_disable_threshold.restype = ctypes.c_int32
    _lib.goud_renderer3d_instantiate_model_batch.argtypes = [GoudContextId, ctypes.c_uint32, ctypes.c_uint32, ctypes.POINTER(ctypes.c_uint32)]
